--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
       </ul>
     </div>
   </nav>
+  <!-- Showcase -->
+  <header id="showcase">
+    <div class="container">
+      <div class="showcase-container">
+        <div class="showcase-content">
+          <div class="category category-sports">Sports</div>
+          <h1>Some Sports Article</h1>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur veritatis autem exercitationem ullam eveniet? Sit laboriosam reprehenderit commodi quod eius at tenetur, eveniet, vitae optio iusto veniam, incidunt sint repudiandae?</p>
+          <a href="article.html" class="btn btn-primary">Read More</a>
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
