--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   
   <!-- Footer -->
 
-  <footer id="main-footer">
+  <footer id="main-footer" class="py-2">
     <div class="container footer-container">
       <div>
         <img src="img/logo_light.png" alt="NewsGrid">
